--- a/integration-tests/requirements.txt
+++ b/integration-tests/requirements.txt
@@ -1,8 +1,9 @@
-urllib3<2  # urllib3-2 requires openssl-1.1 whereas centos-7 ships openssl-1.0
-pytest>=6.2.2
-confluent_kafka == 1.9.2
-h5py>=3.1.0
-flatbuffers>=1.12
-ess-streaming_data_types>=0.21.0
-file-writer-control>=1.2.5
 black==24.2.0
+confluent_kafka==2.4.0
+ess-streaming-data-types
+h5py>=3.1.0
+numpy
+pytest
+pytest-rerunfailures
+requests==2.31.0
+urllib3==1.26.6
