Adding coda pull latest changes stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ stages:
   - domain
   - integration
   - release
+  - coda
 
 .check:
   stage: check
@@ -216,3 +217,15 @@ keep-artifacts:
     expire_in: never
   rules:
     - if: $CI_COMMIT_TAG
+
+coda-pulls-latest-changes:
+  stage: coda
+  before_script:
+    - mkdir -p ~/.ssh
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
+    - chmod 600 ~/.ssh/id_rsa
+    - ssh-keyscan "$CODA_REMOTE_IP_ADDRESS" >> ~/.ssh/known_hosts
+  script:
+    - ssh gitlab@"$CODA_REMOTE_IP_ADDRESS" "cd /ess/ecdc/nicos-core/nexus-json-templates && git pull origin main"
+  needs:
+    - keep-artifacts
