Changing CentOS' decode

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -222,7 +222,7 @@ coda-pulls-latest-changes:
   stage: coda
   before_script:
     - mkdir -p ~/.ssh
-    - echo "$SSH_CODA_PRIVATE_KEY" | base64 --decode > ~/.ssh/id_rsa
+    - echo "$SSH_CODA_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
     - ssh-keyscan "$CODA_REMOTE_IP_ADDRESS" >> ~/.ssh/known_hosts
   script:
