Checking which user is the gitlab runner using

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -218,6 +218,12 @@ keep-artifacts:
   rules:
     - if: $CI_COMMIT_TAG
 
+whoami-check:
+  stage: check
+  script:
+    - whoami
+    - id
+
 coda-pulls-latest-changes:
   stage: coda
   script:
