--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -219,16 +219,10 @@ keep-artifacts:
   rules:
     - if: $CI_COMMIT_TAG
 
-whoami-check:
-  stage: who
-  script:
-    - whoami
-    - id
-
 coda-pulls-latest-changes:
   stage: coda
   script:
-    - ssh gitlab_runner@"$CODA_REMOTE_IP_ADDRESS" "cd /ess/ecdc/nicos-core/nexus-json-templates && git pull origin main"
+    - ssh "$CODA_REMOTE_IP_ADDRESS" "cd /ess/ecdc/nicos-core/nexus-json-templates && git pull origin main"
   needs:
     - job: keep-artifacts 
       optional: true
