--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -222,7 +222,7 @@ keep-artifacts:
 coda-pulls-latest-changes:
   stage: coda
   script:
-    - ssh -i /root/.ssh/gitlab_rsa "$CODA_REMOTE_IP_ADDRESS" "cd /ess/ecdc/nicos-core/nexus-json-templates && git pull origin main"
+    - ssh andrecosta@"$CODA_REMOTE_IP_ADDRESS" "cd /ess/ecdc/nicos-core/nexus-json-templates && git pull origin main"
   needs:
     - job: keep-artifacts 
       optional: true
