--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -221,10 +221,7 @@ keep-artifacts:
 
 coda-pulls-latest-changes:
   stage: coda
-  script:
-    - traceroute 10.102.10.225
-    - systemctl status sshd
-    - ssh "$CODA_REMOTE_IP_ADDRESS" "cd /ess/ecdc/nicos-core/nexus-json-templates && git pull origin main"
+    - ssh -i /root/.ssh/gitlab_runner_key root@10.102.10.225 "cd /ess/ecdc/nicos-core/nexus-json-templates && git pull origin main"
   needs:
     - job: keep-artifacts 
       optional: true
