--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -221,6 +221,7 @@ keep-artifacts:
 
 coda-pulls-latest-changes:
   stage: coda
+  script:
     - ssh -i /root/.ssh/gitlab_runner_key root@10.102.10.225 "cd /ess/ecdc/nicos-core/nexus-json-templates && git pull origin main"
   needs:
     - job: keep-artifacts 
