I dont know anymore

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -227,11 +227,10 @@ coda-pulls-latest-changes:
     - echo "$SSH_CODA_PRIVATE_KEY_BASE64" | base64 -d > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
     - echo "Host 10.102.10.225" > ~/.ssh/config
-    - echo "  StrictHostKeyChecking=no" >> ~/.ssh/config
     - chmod 600 ~/.ssh/config
   script:
-    - echo "Testing with proxy"
-    - ssh -o ProxyCommand="ssh -q -W %h:%p -o StrictHostKeyChecking=no $ESS_HTTP_PROXY" -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@10.102.10.225 "sudo -u nicos bash -c 'cd /ess/ecdc/nicos-core/nexus-json-templates && git pull https://$GIT_READ_TOKEN@github.com/your-repo/your-project.git main'"
+    - echo "Testing ssh"
+    - ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@10.102.10.225 "sudo -u nicos bash -c 'cd /ess/ecdc/nicos-core/nexus-json-templates && git pull https://$GIT_READ_TOKEN@github.com/your-repo/your-project.git main'"
   needs:
     - job: keep-artifacts 
       optional: true    
