--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -230,6 +230,7 @@ coda-pulls-latest-changes:
     - chmod 600 ~/.ssh/config
   script:
     - echo "Testing ssh"
+    - ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@10.102.10.225 "ls /ess/ecdc/nicos-core/"
     - ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@10.102.10.225 "sudo -u nicos bash -c 'cd /ess/ecdc/nicos-core/nexus-json-templates && git pull https://$GIT_READ_TOKEN@github.com/your-repo/your-project.git main'"
   needs:
     - job: keep-artifacts 
