--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ workflow:
 stages:
   - check
   - build
-  - archive
+  - publish
   - domain
   - integration
   - release
@@ -155,9 +155,13 @@ build-alt-distro:
       - DISTRO: almalinux8
         SCL: scl enable gcc-toolset-12 --
 
-archive:
-  stage: archive
+publish_tar_job:
+  stage: publish
   image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
+  before_script:
+    - curl -fL https://install-cli.jfrog.io | sh
+    - jf config add $ESS_ARTIFACTORY_ID --url=$ESS_ARTIFACTORY_URL --user=$ESS_ARTIFACTORY_ECDC_USER --password=$ESS_ARTIFACTORY_ECDC_GENERIC_TOKEN
+    - jf config show
   script:
     - cd build
     - mkdir -p archive/kafka-to-nexus/bin
@@ -167,11 +171,22 @@ archive:
     - cp ./CONAN_INFO archive/kafka-to-nexus/
     - cd archive
     - tar czf kafka-to-nexus.tar.gz kafka-to-nexus
+    - jf rt u --build-name="kafka-to-nexus-centos7" --build-number=${CI_JOB_ID} kafka-to-nexus-centos7.tar.gz ecdc-generic-release/${ARTIFACTORY_UPLOAD_PATH}
   dependencies:
     - build-release
   artifacts:
     paths:
       - build/archive/kafka-to-nexus.tar.gz
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      variables:
+        ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/${CI_DEFAULT_BRANCH}/${CI_PIPELINE_IID}/"
+    - if: $CI_COMMIT_TAG
+      variables:
+        ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/tags/${CI_COMMIT_TAG}/"
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      when: never
+
 
 integration-tests:
   stage: integration
@@ -209,7 +224,7 @@ keep-artifacts:
   script:
     - ls build/archive/kafka-to-nexus.tar.gz
   dependencies:
-    - archive
+    - publish
   artifacts:
     paths:
       - build/archive/kafka-to-nexus.tar.gz
