--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -185,7 +185,7 @@ publish:
       variables:
         ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/tags/${CI_COMMIT_TAG}/"
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-      when: never
+      # when: never
 
 
 integration-tests:
