--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -172,7 +172,7 @@ publish:
     - cp -r ./licenses archive/kafka-to-nexus/
     - cp ./CONAN_INFO archive/kafka-to-nexus/
     - cd archive
-    - tar czf kafka-to-nexus.tar.gz kafka-to-nexus
+    - tar czf kafka-to-nexus-centos7.tar.gz kafka-to-nexus
     - jf rt u --build-name="kafka-to-nexus-centos7" --build-number=${CI_JOB_ID} kafka-to-nexus-centos7.tar.gz ecdc-generic-release/${ARTIFACTORY_UPLOAD_PATH}
   artifacts:
     paths:
