--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -171,6 +171,13 @@ publish:
     - cp -r ./lib archive/kafka-to-nexus/
     - cp -r ./licenses archive/kafka-to-nexus/
     - cp ./CONAN_INFO archive/kafka-to-nexus/
+
+    # - # Create file with build information
+    - touch archive/event-formation-unit/BUILD_INFO
+    - echo 'Repository replace_real_repo_name' >> archive/kafka-to-nexus/BUILD_INFO
+    - echo 'Commit replace_git_commit' >> archive/kafka-to-nexus/BUILD_INFO
+    - echo 'Jenkins build replace_build_id' >> archive/kafka-to-nexus/BUILD_INFO
+
     - cd archive
     - tar czf kafka-to-nexus-centos7.tar.gz kafka-to-nexus
     - jf rt u --build-name="kafka-to-nexus-centos7" --build-number=${CI_JOB_ID} kafka-to-nexus-centos7.tar.gz ecdc-generic-release/${ARTIFACTORY_UPLOAD_PATH}
@@ -185,6 +192,8 @@ publish:
       variables:
         ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/tags/${CI_COMMIT_TAG}/"
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      variables:
+        ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/tags/${CI_COMMIT_TAG}/"
       # when: never
 
 
