--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -180,7 +180,9 @@ publish:
 
     - cd archive
     - tar czf kafka-to-nexus-centos7.tar.gz kafka-to-nexus
-    - jf rt u --build-name="kafka-to-nexus-centos7" --build-number=${CI_JOB_ID} kafka-to-nexus-centos7.tar.gz ecdc-generic-release/${ARTIFACTORY_UPLOAD_PATH}
+    - if [ "$CI_PIPELINE_SOURCE" != "merge_request_event" ]; then
+        jf rt u --build-name="kafka-to-nexus-centos7" --build-number=${CI_JOB_ID} kafka-to-nexus-centos7.tar.gz ecdc-generic-release/${ARTIFACTORY_UPLOAD_PATH};
+      fi  
   artifacts:
     paths:
       - build/archive/kafka-to-nexus-centos7.tar.gz
@@ -191,13 +193,13 @@ publish:
     - if: $CI_COMMIT_TAG
       variables:
         ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/tags/${CI_COMMIT_TAG}/"
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-      when: never
 
 
 integration-tests:
   stage: integration
   image: docker:latest
+  dependencies:
+    - publish
   before_script:
     - cd integration-tests
     - ./setup.sh ../build/archive/kafka-to-nexus-centos7.tar.gz
@@ -214,8 +216,6 @@ integration-tests:
     FILEWRITER_FILEWRITER_CONTAINER_NAME: filewriter-$CI_JOB_ID
     HTTP_PROXY: $ESS_HTTP_PROXY
     HTTPS_PROXY: $ESS_HTTP_PROXY
-  dependencies:
-    - publish
   artifacts:
     when: always
     paths:
