--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ workflow:
 stages:
   - check
   - build
+  - archive
   - publish
   - domain
   - integration
@@ -155,15 +156,11 @@ build-alt-distro:
       - DISTRO: almalinux8
         SCL: scl enable gcc-toolset-12 --
 
-publish:
-  stage: publish
-  image: alpine/curl:latest
+archive:
+  stage: archive
+  image: alpine:latest
   dependencies:
-  - build-release
-  before_script:
-    - curl -fL https://install-cli.jfrog.io | sh
-    - jf config add $ESS_ARTIFACTORY_ID --url=$ESS_ARTIFACTORY_URL --user=$ESS_ARTIFACTORY_ECDC_USER --password=$ESS_ARTIFACTORY_ECDC_GENERIC_TOKEN
-    - jf config show
+    - build-release
   script:
     - cd build
     - mkdir -p archive/kafka-to-nexus/bin
@@ -172,7 +169,7 @@ publish:
     - cp -r ./licenses archive/kafka-to-nexus/
     - cp ./CONAN_INFO archive/kafka-to-nexus/
 
-    # - # Create file with build information
+    # Create file with build information
     - touch archive/kafka-to-nexus/BUILD_INFO
     - echo 'Repository replace_real_repo_name' >> archive/kafka-to-nexus/BUILD_INFO
     - echo 'Commit replace_git_commit' >> archive/kafka-to-nexus/BUILD_INFO
@@ -180,12 +177,21 @@ publish:
 
     - cd archive
     - tar czf kafka-to-nexus-centos7.tar.gz kafka-to-nexus
-    - if [ "$CI_PIPELINE_SOURCE" != "merge_request_event" ]; then
-        jf rt u --build-name="kafka-to-nexus-centos7" --build-number=${CI_JOB_ID} kafka-to-nexus-centos7.tar.gz ecdc-generic-release/${ARTIFACTORY_UPLOAD_PATH};
-      fi  
   artifacts:
     paths:
       - build/archive/kafka-to-nexus-centos7.tar.gz
+
+publish:
+  stage: publish
+  image: alpine/curl:latest
+  dependencies:
+    - archive
+  before_script:
+    - curl -fL https://install-cli.jfrog.io | sh
+    - jf config add $ESS_ARTIFACTORY_ID --url=$ESS_ARTIFACTORY_URL --user=$ESS_ARTIFACTORY_ECDC_USER --password=$ESS_ARTIFACTORY_ECDC_GENERIC_TOKEN
+    - jf config show
+  script:
+    - jf rt u --build-name="kafka-to-nexus-centos7" --build-number=${CI_JOB_ID} build/archive/kafka-to-nexus-centos7.tar.gz ecdc-generic-release/${ARTIFACTORY_UPLOAD_PATH}
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
       variables:
@@ -193,13 +199,14 @@ publish:
     - if: $CI_COMMIT_TAG
       variables:
         ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/tags/${CI_COMMIT_TAG}/"
-
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      when: never
 
 integration-tests:
   stage: integration
   image: docker:latest
   dependencies:
-    - publish
+    - archive
   before_script:
     - cd integration-tests
     - ./setup.sh ../build/archive/kafka-to-nexus-centos7.tar.gz
@@ -231,7 +238,7 @@ keep-artifacts:
   script:
     - ls build/archive/kafka-to-nexus-centos7.tar.gz
   dependencies:
-    - publish
+    - archive
   artifacts:
     paths:
       - build/archive/kafka-to-nexus-centos7.tar.gz
