--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -200,7 +200,9 @@ publish:
       variables:
         ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/tags/${CI_COMMIT_TAG}/"
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-      when: never
+      variables:
+        ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/${CI_DEFAULT_BRANCH}/${CI_PIPELINE_IID}/"
+      # when: never
 
 integration-tests:
   stage: integration
