--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -203,6 +203,9 @@ publish:
         ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/${CI_DEFAULT_BRANCH}/${CI_PIPELINE_IID}/"
     - if: $CI_COMMIT_TAG
       variables:
-        ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/tags/${CI_COMMIT_TAG}/"
+        ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/tags/${CI_COMMIT_TAG}/${CI_PIPELINE_IID}/"
+    - if: $CI_COMMIT_BRANCH
+      variables:
+        ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/branches/${CI_COMMIT_BRANCH}/${CI_PIPELINE_IID}/"
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       when: never
