--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -141,6 +141,24 @@ build-release:
 #    - ./bin/kafka-to-nexus --version
 #    - ./bin/UnitTests
 
+build-alt-distro:
+  <<: *build_template
+  stage: build
+  image: $ALMALINUX9_IMAGE
+  variables:
+    SCL: scl enable gcc-toolset-12 --
+  script:
+    - mkdir build
+    - cd build
+    - conan install --build missing .. 
+    - conan info ../conanfile.txt > CONAN_INFO
+    - cmake -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON -DCOV=ON ..
+    - $SCL cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON ..
+    - $SCL ninja all UnitTests docs
+    - ./bin/kafka-to-nexus --version
+    - ./bin/UnitTests
+
+
 archive:
   stage: archive
   image: alpine:latest
