--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ workflow:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
 
 variables:
-  ALMALINUX9_IMAGE: "registry.esss.lu.se/ecdc/ess-dmsc/docker-almalinux8-build-node:latest"
+  ALMALINUX9_IMAGE: "registry.esss.lu.se/ecdc/ess-dmsc/docker-almalinux9-conan:1.1.0"
   CENTOS7_IMAGE: "registry.esss.lu.se/ecdc/ess-dmsc/build-nodes/centos7:1.0"
   UBUNTU2204: "registry.esss.lu.se/ecdc/ess-dmsc/docker-ubuntu2204-build-node:latest"
   BUILD_DIR: "build"
@@ -89,7 +89,7 @@ build-debug:
   script:
     - mkdir build
     - cd build
-    - conan install --build=missing  ..
+    - conan install --build missing .. --profile="linux_x86_64_gcc11_legacy"
     - conan info ../conanfile.txt > CONAN_INFO
     - cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON -DCOV=ON ..
     - ninja all UnitTests docs
@@ -111,7 +111,7 @@ build-release:
   script:
     - mkdir build
     - cd build
-    - conan install --build=missing  ..
+    - conan install --build missing .. --profile="${CONAN_PROFILE}"
     - conan info ../conanfile.txt > CONAN_INFO
     - ../ci/configure-release.sh .. .
     - ninja all UnitTests docs
@@ -136,8 +136,9 @@ build-alt-distro:
   script:
     - mkdir build
     - cd build
-    - conan install --build=missing  ..
+    - conan install --build missing .. 
     - conan info ../conanfile.txt > CONAN_INFO
+    - cmake -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON -DCOV=ON ..
     - $SCL cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON ..
     - $SCL ninja all UnitTests docs
     - ./bin/kafka-to-nexus --version
@@ -226,6 +227,8 @@ publish:
   script:
     - jf rt u --build-name="kafka-to-nexus-centos7" --build-number=${CI_PIPELINE_IID} kafka-to-nexus-centos7.tar.gz ecdc-generic-release/${ARTIFACTORY_UPLOAD_PATH}
   rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      when: never
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
       variables:
         ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/${CI_DEFAULT_BRANCH}/${CI_PIPELINE_IID}/"
@@ -235,5 +238,3 @@ publish:
     - if: $CI_COMMIT_BRANCH
       variables:
         ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/branches/${CI_COMMIT_BRANCH}/${CI_PIPELINE_IID}/"
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-      when: never
